[gd_scene load_steps=3 format=2]

[ext_resource path="res://LerpAngle/Icon.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 503, 283 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HScrollBar" type="HScrollBar" parent="."]
margin_left = 232.0
margin_top = 55.0
margin_right = 810.0
margin_bottom = 89.0
hint_tooltip = "Weight"
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="."]
margin_left = 292.0
margin_top = 107.0
margin_right = 621.0
margin_bottom = 196.0

[node name="HScrollBarInit" type="HScrollBar" parent="."]
margin_left = 232.0
margin_top = 412.0
margin_right = 810.0
margin_bottom = 446.0
hint_tooltip = "Weight"
min_value = -360.0
max_value = 360.0
step = 1.0

[node name="HScrollBarFinal" type="HScrollBar" parent="."]
margin_left = 232.0
margin_top = 471.0
margin_right = 810.0
margin_bottom = 505.0
hint_tooltip = "Weight"
min_value = -360.0
max_value = 360.0
step = 1.0

[connection signal="value_changed" from="HScrollBarInit" to="Icon" method="_on_HScrollBarInit_value_changed"]
[connection signal="value_changed" from="HScrollBarFinal" to="Icon" method="_on_HScrollBarFinal_value_changed"]
